# AdsorPy

./: .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_lint.txt  sbom.cdx.json  tach.toml  tox.ini  tox.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pr-prefix-labeller.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .docs-ci.yml  .github-ci.yml  codeql.yml  dependabot.yml  docs-ci.yml  github-ci.yml  pin-hash-slsa.yml  publish_to_PyPI.yml  publish_to_TestPyPI.yml  scorecard.yml  tests-ci.yml  update_copyright_jan1st.yml
docs/source/: adsorpy.molecule_lib.rst  adsorpy.rsa_calculator.rst  adsorpy.rst  adsorpy.types.rst  adsorpy.typing.rst  conf.py  index.rst  modules.rst  rsa_mc.molecule_lib.rst  rsa_mc.randomsequentialadsorption.rst  rsa_mc.rsa_calculator.rst  rsa_mc.rsa_config.rst  rsa_mc.rst  rsa_mc.run_simulation.rst
docs/source/_static/: style.css
src/: __init__.py  __main__.py
src/adsorpy/: VdW_Radii.csv  __init__.py  config.json  gui.py  molecule_colour.json  molecule_lib.py  randomsequentialadsorption.py  rsa_calculator.py  rsa_config.py  run_simulation.py  svg_plotter.py  types.py  vdw_radii.json
tests/: rsa_test.py  run_simulation_test.py  xyz_fuzzer.py  xyz_fuzzer_test.py
tests/test_data/: config_test_hard.json  config_test_periodic.json  config_test_soft.json
