[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adsorpy"
#dynamic = ["version"]  # The Python guide says that this will use the Git tag to fill it in.
version = "1.2.2"  # Edit manually.
description = "Random sequential adsorption (RSA) simulation, 2D lattice-based."
authors = [{ name = "J.F.W. Maas", email = "j.f.w.maas@tue.nl" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E.md"]
classifiers = [
    # Project maturity:
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Natural Language :: English",
    # Intended users of project:
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    # Supported Python versions:
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # This does not run on mobile because of Shapely.
    "Operating System :: OS Independent",
]
keywords = [
    "RSA",
    "random sequential adsorption",
    "adsorption",
    "surface science",
    "Monte Carlo",
    "lattice model",
    "statistical mechanics",
    "packing",
    "jamming",
    "molecular adsorption",
    "coverage",
    "computational chemistry",
    "computational physics",
    "stochastic simulation",
    "gap size distribution"
]

dependencies = [
    "numpy>=2.2.6",
    "numba>=0.65.1",
    "matplotlib>=3.10.9",
    "shapely>=2.1.2",
    "pydantic>=2.13.4",
    "rtree>=1.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.152.4",
    "scipy>=1.15.3",
    "codecov>=2.1.13",
]
lint = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
    "pyright>=1.1.409",
    "tach>=0.34.1",
    "slotscheck>=0.19.1",
]
docs = [
    "sphinx>=8.0",
    "furo>=2025.12.19",
    "sphinx_design>=0.6.0",
    "sphinx-autodoc-typehints>=3.0",
    "sphinx-pyproject>=0.3.0",
]
envs = [
    "tox>=4.54",
    "tox-uv>=1.35.2",
]
dev-misc = [
    "build>=1.5.0",
    "twine>=6.0",
    "check-wheel-contents>=0.6.3",
    "pre-commit>=4.6.0"
]

[project.urls]
github = "https://github.com/JoosFWMaas/AdsorPy"
Documentation = "https://joostfwmaas.github.io/AdsorPy"
Changelog = "https://github.com/JoostFWMaas/AdsorPy/blob/main/CHANGELOG.md"
homepage = "https://pypi.org/project/adsorpy/"
issues = "https://github.com/JoostFWMaas/AdsorPy/issues"
download = "https://pypi.org/project/adsorpy/#files"

[tool.hatch.package_data]
"adsorpy" = ["py.typed"]

[tool.hatch.build]
#include = ["src/**"]
#only-packages = true
deterministic = true

[tool.hatch.build.targets.wheel]
sbom-files = ["sbom.cdx.json"]
packages = ["src/adsorpy"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/adsorpy",
    "/pyproject.toml",
    "README.md",
    "/LICENSE",
    "sbom.cdx.json",
]

[tool.hatch.env]
requires = [
    "hatch-pip-compile"
]

[tool.hatch.envs.default]
type = "pip-compile"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/adsorpy"]
addopts = ["--cov=src/adsorpy", "--cov-report=term", "--cov-report=html", "--strict-markers"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/Output/*",
    "*/__main__.py",
    "*/__init__.py",
    "*/molecule_lib*.py", # There is no point in testing the individual molecules.
    "*/rsa_config.py", # Cannot be tested properly. Will be reworked.
    "*/sensitivity.py", # Demonstrator, not included.
    "*/Scripts/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "def main()",
    "if False:",
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "def plot_*",
    "if print_*",
    "if plot_*",
    "while temp_results_folder.is_dir()", # Checks for collision in saving folders. Nothing is saved for tests.
    "if self.flux_flag:", # Experimental feature, not yet usable.
    "_run_flux_*", # See above.
    "if not self.simple_shape_flag", # Idem ditto.
    "if version_info", # Is tested with Tox (between instances of Pytest). False negative.
    "from datetime import", # Used for compatibility between versions. Only tests for one version at a time.
    "@njit", # Compiled code is not seen by coverage. This code is tested with Hypothesis though. False negative.
]

[tool.mypy]
mypy_path = ["src", "optional", "tests"]
ignore_missing_imports = true
strict = true
disallow_any_explicit = true
#disallow_any_decorated = true  # Throws an error because geo.Polygon in a tuple is turned into Any for the @staticmethod.
#warn_unreachable = true  # Set this to true when pushing to main?
exclude = ['/Scripts']
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.flake8]
max-line-length = 120
exclude = [
    ".venv",
    "venv",
    "tests",
    "Lib",
]
count = true

[tool.isort]
src_paths = ["src"]
line_length = 88
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
include_trailing_comma = true
#remove_unused_imports = true
skip = [".json", ".venv", ".tox"]
known_first_party = ["RandomSequentialAdsorption"]
known_local_folder = ["molcule_lib", "RSA_Calculator", "rsa_config"]


[tool.black]
line-length = 88

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ['ALL']
pylint.max-args = 11
pylint.max-branches = 20
pylint.max-statements = 80
mccabe.max-complexity = 20
future-annotations = true  # Future annotations enabled.

ignore = [
    "ERA001",
    "TD",
    "T201",
    "FIX", # This is for me to fix over several versions. These functions are never used unless they are fixed.
    "DTZ003", # The datetime warning or  utcnow()
    "FBT001", # Disallows booleans in functions. (I can see its use case, but no.)
    "FBT002", # Disallows booleans default arguments in functions.
    "ARG002", # Unused method argument.
    "ARG001", # Unused function argument.
    "D203", # Conflicts with D211: no blank line before class.
    "D213", # Conflicts with D212: multi-line summary first line.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]  # Missing docstring in public package. Not needed, package is empty.
"test*.py" = ["S101", "TC"]  # Assert should not be used in production code! But this is test code, so here it is expected.

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["pydantic.dataclasses.dataclass"]

[tool.pyright]
include = ["src", "tests"]

typeCheckingMode = "strict"

useLibraryCodeForTypes = true

# Avoid penalising third-party libraries.
reportMissingTypeStubs = "none"

# Suppress "partially unknown" noise from deps like numpy, shapely, matplotlib, etc..
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnnecessaryCast = "none"  # These are needed for mypy.
reportUnnecessaryIsInstance = "none"  # These are needed for mypy.

# Keep useful strict checks.
reportImplicitOverride = "error"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryComparison = "warning"  # These are usually included to prevent the user from breaking things.

[tool.slotscheck]
strict-imports = true
include-modules = """
(
    src
#    |tests
)
"""
